[package]
name = "rmk-esp32c3"
version = "0.1.5"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.9", path = "../../rmk", features = [
    "col2row",
    "eeprom",
] }

bleps = { git = "https://github.com/bjoernQ/bleps", features = [
    "macros",
    "defmt",
    "async",
] }
esp-wifi = { version = "0.4.0", features = [
    "esp32c3",
    "dump-packets",
    "async",
    "defmt",
    "ble",
], default-features = false }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-println = { version = "0.9.0", features = [
    "esp32c3",
    "defmt-espflash",
    "uart",
] }
esp-hal = { version = "0.16.1", features = [
    "esp32c3",
    "defmt",
    "embassy-executor-thread",
    "embassy-time-timg0",
    "async",
] }
defmt = "0.3"
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "defmt",
    "integrated-timers",
] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-esp32c3"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 3          # esp-wifi should be built with opt-level 2 or 3
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = 3           # esp-wifi should be built with opt-level 2 or 3
overflow-checks = false
lto = "fat"
