[package]
name = "rmk-esp32c3"
version = "0.1.5"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.11", path = "../../rmk", features = [
    "col2row",
    "eeprom",
    "esp32_ble"
] }
esp32-nimble = { version = "0.6.0", default-features = false, features = [
    "no_std",
] }
esp-idf-sys = { version = "0.34", default-features = false, features = [
    "panic_handler",
    "alloc_handler",
] }
esp-println = { version = "0.9", features = [
    "esp32c3",
    "defmt-espflash",
    "uart",
] }
defmt = "0.3"
embassy-executor = { version = "0.5.0", features = [
    "arch-riscv32",
    "nightly",
    "executor-thread",
    "defmt",
] }
esp-idf-svc = { version = "0.48", default-features = false, features = [
    "embassy-sync",
    "critical-section",
    "embassy-time-driver",
] }
esp-idf-hal = { verison = "*", default-features = false, features = [
    "embassy-sync",
] }
riscv-rt = "0.12.2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"
embuild = "0.31.3"

[[bin]]
name = "rmk-esp32c3"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 3          # esp-wifi should be built with opt-level 2 or 3
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = 3           # esp-wifi should be built with opt-level 2 or 3
overflow-checks = false
lto = "fat"
