[package]
name = "rmk-esp32s3"
version = "0.1.5"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.12", path = "../../rmk", features = [
    "col2row",
    "esp32s3_ble",
] }
esp32-nimble = { version = "0.6.0" }
defmt = "0.3"
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue-8"] }
esp-println = { version = "0.9", features = ["esp32s3", "defmt-espflash"] }
esp-idf-svc = { version = "0.48", default-features = false, features = [
    "std",
    "alloc",
    "binstart",
    "embassy-sync",
    "critical-section",
    "embassy-time-driver",
    "native"
] }
static_cell = "2.0"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"
embuild = "0.31.3"

[[bin]]
name = "rmk-esp32s3"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 3          # esp-wifi should be built with opt-level 2 or 3
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = 3           # esp-wifi should be built with opt-level 2 or 3
overflow-checks = false
lto = "fat"
