# cargo-features = ["per-package-target"]

[package]
name = "rmk-rp2040"
version = "0.1.2"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

# forced-target = "thumbv6m-none-eabi"

[dependencies]
rmk = { version = "0.1.2", path = "../../rmk", features = [
    "eeprom",
    "col2row",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-storage = "0.3"
log = "0.4.19"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
packed_struct = { version = "0.10.1", default-features = false }
static_cell = { version = "2" }

[features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[[bin]]
name = "rmk-rp2040"
test = false
bench = false
