[package]
name = "rmk-rp2040"
version = "0.1.2"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.2", path = "../../rmk", features = [
    "eeprom",
    "col2row",
] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.1", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.5", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
cortex-m-rt = "0.7.3"
embedded-storage = "0.3"
portable-atomic = { version = "1.5", features = ["critical-section"] }
packed_struct = { version = "0.10.1", default-features = false }
static_cell = { version = "2" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# [features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[[bin]]
name = "rmk-rp2040"
test = false
bench = false
