[package]
name = "rmk-stm32h7"
version = "0.1.2"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.2", path = "../../rmk", features = [
    "eeprom",
    "col2row",
] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.3"
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.1", features = [
    "stm32h7b0vb",
    "defmt",
    "time-driver-any",
] }
embassy-executor = { version = "0.5", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
packed_struct = { version = "0.10.1", default-features = false }
embedded-storage = { version = "0.3" }
static_cell = { version = "2" }

# rtt-target = "0.5.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# log = "0.4.19"

# defmt deps
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-stm32h7"
test = false
bench = false
