[package]
name = "rynk-serial"
version.workspace = true
edition.workspace = true
rust-version = "1.85"
authors.workspace = true
description = "USB CDC-ACM serial transport for the Rynk host library"
license.workspace = true
repository.workspace = true
keywords = ["keyboard", "firmware", "rmk", "protocol", "serial"]

# Native USB CDC-ACM serial: async read/write + the concurrent port probe.
[dependencies]
rynk = { path = ".." }
rmk-types.workspace = true
tokio-serial.workspace = true
# Wraps the tokio-serial stream into the embedded-io traits `rynk` consumes.
embedded-io-adapters = { workspace = true, features = ["tokio-1"] }
# `rt` for the `JoinSet` candidate probe + `spawn_blocking` enumeration;
# `time` for the transport-owned handshake timeout.
tokio = { version = "1.47", default-features = false, features = ["rt", "time"] }

[dev-dependencies]
env_logger = "0.11"
log.workspace = true
serde.workspace = true
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
