[package]
name = "rynk-serial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "USB CDC-ACM serial transport for the Rynk host library"
license.workspace = true
repository.workspace = true
keywords = ["keyboard", "firmware", "rmk", "protocol", "serial"]

[dependencies]
rynk = { path = ".." }
rmk-types.workspace = true
tokio-serial.workspace = true
embedded-io-adapters = { workspace = true, features = ["tokio-1"] }
tokio = { version = "1.47", default-features = false, features = ["time"] }

[dev-dependencies]
serde.workspace = true
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
