[package]
name = "rmk-esp32c3"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
central = [
    "rmk/esp32c6_ble",
    "esp-backtrace/esp32c6",
    "esp-storage/esp32c6",
    "esp-hal/esp32c6",
    "esp-println/esp32c6",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]
peripheral = [
    "rmk/esp32c3_ble",
    "esp-backtrace/esp32c3",
    "esp-storage/esp32c3",
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-radio/esp32c3",
    "esp-rtos/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
]

[dependencies]
rmk = { path = "../../../rmk", default-features = false, features = [
    "log",
    "split",
    "storage",
    "vial",
] }
embassy-executor = { version = "0.9" }
esp-backtrace = { version = "0.18", features = [
    "panic-handler",
    "println",
] }
esp-storage = { version = "0.8.0" }
esp-hal = { version = "1.0", features = ["unstable"] }
esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["log-04"] }
esp-radio = { version = "0.17", features = ["ble", "unstable"] }
esp-rtos = { version = "0.2", features = ["esp-radio", "embassy"]}
esp-bootloader-esp-idf = { version = "0.4", features = ["log-04"] }
bt-hci = { version = "0.6" }
rand_core = { version = "0.6", default-features = false }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"
embuild = "0.33"
cc = "1.2.9"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"
required-features = ["central"]

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"
required-features = ["peripheral"]


[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false

