[package]
name = "rmk-esp32c3"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { path = "../../../rmk", default-features = false, features = [
    "col2row",
    "esp32c3_ble",
    "log",
    "storage",
] }
embassy-executor = { version = "0.9" }
esp-backtrace = { version = "0.17", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-storage = { version = "0.7.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9", features = ["esp32c3"] }
esp-alloc = { version = "0.8.0" }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.15.0", features = ["esp32c3", "unstable", "ble"] }
esp-preempt = { version = "0.0.1", features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3", "log-04"] }
bt-hci = { version = "0.4" }
rand_core = { version = "0.6", default-features = false }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"
embuild = "0.33"
cc = "1.2.9"

[[bin]]
name = "rmk-esp32c3"
test = false
bench = false

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false

[patch.crates-io]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-preempt = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "35e2082" }
