[package]
name = "rmk-nrf52810-ble"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { path = "../../../rmk", features = ["nrf52810_ble", "col2row"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.4", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.5", features = [
    "defmt",
    "nrf52810",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "b15c91008f085c8c1f21fdbfc176a60dee4ab9fa" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "b15c91008f085c8c1f21fdbfc176a60dee4ab9fa" }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-nrf52810-ble"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
