[package]
name = "rmk-nrf52810-ble"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { path = "../../../rmk", features = ["nrf52810_ble"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52810",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-nrf52810-ble"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
